crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__member_access-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"foo().bar()\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..11,
                expr: App(
                    App {
                        span: 0..11,
                        lam: Member(
                            Member {
                                span: 0..9,
                                obj: App(
                                    App {
                                        span: 0..5,
                                        lam: Ident(
                                            Ident {
                                                span: 0..3,
                                                name: "foo",
                                            },
                                        ),
                                        args: [],
                                    },
                                ),
                                prop: Ident(
                                    Ident {
                                        span: 6..9,
                                        name: "bar",
                                    },
                                ),
                            },
                        ),
                        args: [],
                    },
                ),
            },
        ],
    },
)
