crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__member_access-5.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"arr[0][1]\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..9,
                expr: Member(
                    Member {
                        span: 0..9,
                        obj: Member(
                            Member {
                                span: 0..6,
                                obj: Ident(
                                    Ident {
                                        span: 0..3,
                                        name: "arr",
                                    },
                                ),
                                prop: Computed(
                                    ComputedPropName {
                                        span: 4..5,
                                        expr: Lit(
                                            Num(
                                                Num {
                                                    span: 4..5,
                                                    value: "0",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                        prop: Computed(
                            ComputedPropName {
                                span: 7..8,
                                expr: Lit(
                                    Num(
                                        Num {
                                            span: 7..8,
                                            value: "1",
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
