crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__member_access-7.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"arr[arr.length - 1];\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..20,
                expr: Member(
                    Member {
                        span: 0..19,
                        obj: Ident(
                            Ident {
                                span: 0..3,
                                name: "arr",
                            },
                        ),
                        prop: Computed(
                            ComputedPropName {
                                span: 4..18,
                                expr: Op(
                                    Op {
                                        span: 4..18,
                                        op: Sub,
                                        left: Member(
                                            Member {
                                                span: 4..14,
                                                obj: Ident(
                                                    Ident {
                                                        span: 4..7,
                                                        name: "arr",
                                                    },
                                                ),
                                                prop: Ident(
                                                    Ident {
                                                        span: 8..14,
                                                        name: "length",
                                                    },
                                                ),
                                            },
                                        ),
                                        right: Lit(
                                            Num(
                                                Num {
                                                    span: 17..18,
                                                    value: "1",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
