crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__member_access.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"a.b.c\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..5,
                expr: Member(
                    Member {
                        span: 0..5,
                        obj: Member(
                            Member {
                                span: 0..3,
                                obj: Ident(
                                    Ident {
                                        span: 0..1,
                                        name: "a",
                                    },
                                ),
                                prop: Ident(
                                    Ident {
                                        span: 2..3,
                                        name: "b",
                                    },
                                ),
                            },
                        ),
                        prop: Ident(
                            Ident {
                                span: 4..5,
                                name: "c",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
