crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__numbers.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"10\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..2,
                expr: Lit(
                    Num(
                        Num {
                            span: 0..2,
                            value: "10",
                        },
                    ),
                ),
            },
        ],
    },
)
