crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__objects-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let obj = {x, y};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..17,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "obj",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Obj(
                        Obj {
                            span: 10..16,
                            props: [
                                Prop(
                                    Shorthand(
                                        Ident {
                                            span: 10..16,
                                            name: "x",
                                        },
                                    ),
                                ),
                                Prop(
                                    Shorthand(
                                        Ident {
                                            span: 10..16,
                                            name: "y",
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
